Main.js not building

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		</style>
 	</head>
 	<body>    
-		<script type="module" src="/main.js"></script>
+		<script type="module" src="/src/main.js"></script>
 		<p id="item">/ car radio i.</p>
 	</body>
 </html>
