--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="/src/style.css">
 		<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet'>
 		<meta charset="utf-8">
 		<title>car radio i.</title>
