adding feedback for animations

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 	</head>
 	<body>    
 		<script type="module" src="/src/main.js"></script>
-		<p id="item">/ car radio i.</p>
+		<div style="display: flex;">
+			<p id="item">/ car radio i.</p>
+			<p id="item2"></p>
+		</div>
+
 	</body>
 </html>
